<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profilesfragments.ClubPlayerProfileFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/club_home_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/sptr_club_player_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/sptr_arrow_back"
            app:title="@string/sptr_player_details_uppercase"
            android:theme="@style/ToolbarTheme"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/FirebaseUI.Text.InputLabel"
                android:text="@string/sptr_club_name" />
            <TextView
                android:id="@+id/sptr_club_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/FirebaseUI.Text.T11"
                tools:text="Harris Nawrangy"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/FirebaseUI.Text.InputLabel"
                    android:text="@string/sptr_age" />
                <TextView
                    android:id="@+id/sptr_club_player_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/FirebaseUI.Text.T11"
                    tools:text="22"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/FirebaseUI.Text.InputLabel"
                    android:text="@string/sptr_gender" />
                <TextView
                    android:id="@+id/sptr_club_player_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/FirebaseUI.Text.T11"
                    tools:text="Male"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/FirebaseUI.Text.InputLabel"
                android:text="@string/sptr_email_uppercase" />
            <TextView
                android:id="@+id/sptr_club_player_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="harrisnawarangee91@gmail.com"
                android:textAppearance="@style/FirebaseUI.Text.T11"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sptr_preferred_sports_uppercase"
                android:textAppearance="@style/FirebaseUI.Text.InputLabel"/>
            <TextView
                android:id="@+id/sptr_club_player_preferred_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/FirebaseUI.Text.T11"
                tools:text="Football"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/FirebaseUI.Text.InputLabel"
                android:text="@string/sptr_location_uppercase" />
            <TextView
                android:id="@+id/sptr_club_player_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/FirebaseUI.Text.T11"
                tools:text="India, Maharashtra, Mumbai, Andheri(West) - 400058"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sptr_description_uppercase"
                android:textAppearance="@style/FirebaseUI.Text.InputLabel"/>
            <TextView
                android:id="@+id/sptr_club_player_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/FirebaseUI.Text.T11"
                tools:text="Full Player Description"/>
        </LinearLayout>

        <Button
            android:id="@+id/sptr_club_player_gallery_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/sptr_view_club_gallery"
            android:backgroundTint="@color/color_button"/>

        <Button
            android:id="@+id/sptr_club_player_remove_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sptr_remove_player_uppercase"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@android:color/holo_red_light" />
    </LinearLayout>

</LinearLayout>