<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingStart="40dp"
    android:paddingEnd="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sptr_login_button"
        android:textAllCaps="true"
        android:fontFamily="@font/secularoneregular"
        android:textSize="38sp"
        android:textColor="@color/color_title"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Sporter.TextInputLayout"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sptr_signin_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sptr_hint_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Sporter.TextInputLayout"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sptr_signin_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sptr_navigateto_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="14sp"
                android:layout_toStartOf="@+id/next_button"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="@string/sptr_signup_uppercase"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/sptr_login_button"
                style="@style/Widget.Sporter.Button" />
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sptr_forgot_password"
                android:textColor="@android:color/holo_blue_light"
                android:layout_centerVertical="true"
                android:textSize="14sp" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>