<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlayerHomeFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/sptr_player_home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            app:navigationIcon="@drawable/toolbar_icon"
            android:theme="@style/ToolbarTheme"
            app:titleTextColor="@color/colorPrimaryDark"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="128dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_home_screen_text"
            android:gravity="center"
            android:textSize="14sp"
            android:fontFamily="@font/hindsiligurilight"
            android:textColor="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/create_club_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_club"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/hindsiliguribold"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/color_button"
                android:textAllCaps="true"
                tools:ignore="AllCaps" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>